# oracle-alpha

./: .colosseum-api-key  .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  SUBMISSION.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
app/: backtest.html  index.html  landing.html  manifest.json  offline.html  showcase.html  skill.json  sw.js
coverage/: confidence.ts.html  dedup.ts.html  index.html  lcov.info
coverage/lcov-report/: confidence.ts.html  dedup.ts.html  index.html
coverage/src/: cli.ts.html  index.html  index.ts.html
docs/: API.md  ARCHITECTURE.md  DEMO_RECORDING_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HACKATHON_CHECKLIST.md  PITCH_DECK.md  REASONING-PROOFS.md  TELEGRAM_SETUP.md  openapi.yaml
examples/: client.py  client.ts
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
scripts/: demo-setup.sh  deploy-mainnet.sh  integration-test.sh  quick-deploy.sh  start-demo.sh  test-onchain.ts
src/: cli.ts  index.ts
src/aggregator/: index.ts  weights.ts
src/ai/: explainer.ts  index.ts  price-predictor.ts
src/alerts/: rules.ts  signal-alert.ts
src/analysis/: explainer.ts
src/api/: auth.ts  (+7 more)
tests/: aggregator.test.ts  api.test.ts  auth.test.ts  backtest.test.ts  confidence.test.ts  dedup.test.ts  demo.test.ts  health.test.ts  metrics.test.ts  payouts.test.ts  portfolio.test.ts  subscription.test.ts  validators.test.ts
(+142 files in other folders)
