[package]
name = "oracle"
version = "0.1.0"
description = "ORACLE Alpha - On-chain signal verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
